iter_language/tests/corpus/invalid/flat-syntax.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: flat-syntax.iter
---
Error: flat Iterfile syntax is no longer supported; define named `agent`/`workspace`/`queue` definitions and bind them in a `runner { agent = ... workspace = ... }` block
    ╭─[flat-syntax.iter:15:1]
    │
 15 │ runner {
    │ ───┬──  
    │    ╰──── flat Iterfile syntax is no longer supported; define named `agent`/`workspace`/`queue` definitions and bind them in a `runner { agent = ... workspace = ... }` block
────╯

Error: top-level `prompt "..."` is no longer supported; define a named prompt with `prompt as <name> "..."` and reference it, or write the prompt inside the runner block (`prompt = "..."` or a `prompt { <guard> => ..., _ => ... }` match)
    ╭─[flat-syntax.iter:20:1]
    │
 20 │ prompt "Iterate."
    │ ────────┬────────  
    │         ╰────────── top-level `prompt "..."` is no longer supported; define a named prompt with `prompt as <name> "..."` and reference it, or write the prompt inside the runner block (`prompt = "..."` or a `prompt { <guard> => ..., _ => ... }` match)
────╯
